# Chronos

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  build_log.txt  check_observability.sh  clippy_log.txt  docker-compose.yml  jurnal.md  log.txt  run_log.txt  tarpaulin-report.html  test_log.txt  test_phase1.sql  todo.txt
.github/workflows/: release.yml  rust.yml
benches/: storage_bench.rs
data/: users.csv
data/node1/node1/schemas/: users.json
demo_data/: db  snap.0000000000000670
docs/: README.md  api-reference.md  architecture.md  deployment-guide.md  limitations.md  prod-deployment-guide.md  sql-reference.md
examples/: raft_write_load.rs  storage_demo.rs
proto/: raft.proto
scripts/: soak_24h.sh
src/: config.rs  embedded.rs  lib.rs  main.rs
src/common/: mod.rs  timestamp.rs
src/executor/: error.rs  mod.rs
src/network/: client.rs  connectivity.rs  error.rs  http_admin.rs  ingest.rs  metrics.rs  mod.rs  offline_queue.rs  server.rs  sync_status.rs  sync_worker.rs
src/parser/: ast.rs  chronos.pest  error.rs  mod.rs  sql.pest
src/raft/: config.rs  error.rs  log.rs  mod.rs  node.rs  state.rs
src/repl/: mod.rs
src/storage/: csv_engine.rs  csv_storage.rs  error.rs  mod.rs  offline_queue.rs  sled_engine.rs  snapshot.rs  wal.rs
src/storage/compression/: chimp.rs  mod.rs
tests/: chimp_integration.rs  connectivity_monitor.rs  raft_cluster.rs  raft_log_proptest.rs  snapshot.rs  sync_lww.rs  ttl.rs
