[package]
name = "chronos"
version = "0.2.0"
edition = "2021"
description = "A SQL database built from scratch in Rust"
authors = ["Your Name"]

[dev-dependencies]
tempfile = "3.3.0"
criterion = { version = "0.5", features = ["async_tokio"] }

[dependencies]
# SQL Parser
pest = "2.7"
pest_derive = "2.7"

# Command line interface
rustyline = "12.0"
clap = { version = "4.4", features = ["derive"] }

# Storage
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.141"

# Utilities
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
bincode = { version = "2.0.1", features = ["serde"] }
uhlc = "0.8.2"
tokio = { version = "1.47.0", features = ["full"] }
rand = "0.9.2"

# Phase 2 dependencies
tonic = "0.10"
prost = "0.12"

# New storage backends
sled = "0.34"
async-trait = "0.1"
regex = "1.10"

[build-dependencies]
tonic-build = { version = "0.10", features = ["prost"] }

# Binary size optimization for edge deployment
[profile.release]
opt-level = "z"          # Optimize for size instead of speed
lto = true               # Link-time optimization for smaller binary
codegen-units = 1        # Better optimization, slower compile
strip = true             # Strip symbols from binary
panic = "abort"          # Don't include unwinding code

[[bench]]
name = "storage_bench"
harness = false
